# blacksmith

./: .gitignore  Makefile  README.md  project.txt
.github/: FUNDING.yml
blacksmithAI/: .env.example  .gitignore  Dockerfile  Implementations.md  config.json  docker-compose.yml  langgraph.json  main.py  pentest.py  pyproject.toml  tools.md  update_tool_documentation.py
blacksmithAI/agents/: base.py  exploit.py  pentester.py  post_exploit.py  recon.py  scan_enum.py  vuln_map.py
blacksmithAI/agents/tools_doc/exploitation/: exploitation_tools.md
blacksmithAI/agents/tools_doc/reconnaissance/: reconnaissance_tools.md
blacksmithAI/agents/tools_doc/vulnerability_mapping/: vuln_tools.md
blacksmithAI/store/vector_db/: chroma.sqlite3
blacksmithAI/tools/shell/: Dockerfile  README_ASYNC.md  dockerfile.final  server_async.py
blacksmithAI/utils/: loader.py  vectors.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/components/icons/: blacksmith.tsx
frontend/src/components/thread/: index.tsx
frontend/src/providers/: Stream.tsx
pentestai/: .env.example  config.json  langgraph.json  main.py  pyproject.toml  tools.md
pentestai/agents/: base.py  exploit.py  post_exploit.py  recon.py  scan_enum.py  vuln_map.py
pentestai/agents/tools_doc/post_exploitation/: post_tools.md
pentestai/mcp/: mcp-code-interpreter.json  mcp-playwright.json  mcp.json
pentestai/store/vector_db/: chroma.sqlite3
pentestai/tools/: tools.py
pentestai/tools/shell/: Dockerfile  dockerfile.final  requirements.txt  server.py
(+3 files in other folders)
